# template-rust

./: .editorconfig  .gitignore  .pii-allow  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.claude/: settings.json
.claude/commands/: pr-reply.md  pr-report.md  pr-review.md  pr-watch.md  pull-reviews.md  reply-reviews.md  sprint-review.md  watch-pr.md
.claude/skills/: pull-reviews.md  reply-reviews.md  sprint-review.md
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/instructions/: docs-review.instructions.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: command.rs  main.rs  parse.rs
crates/core/: Cargo.toml
crates/core/src/: arb.rs  conn.rs  lib.rs  test.rs  testing.rs
crates/core/src/test/: arb.rs
crates/project/: Cargo.toml
crates/project/src/: lib.rs
doc/: workflow.md
doc/audits/: README.md  coverage.md  docrot.md  hygiene.md  pii.md
doc/reviews/: review-0000.md  review-00000.md
scripts/: _gh.py  audit_report.sh  audit_run.py  check-pii.sh  check_layers.sh  check_pii.sh  extract_pr_body.sh  git_merge.sh  github_client.py  local_review.sh  next_pr_number.sh  pr_report.py  pr_request.sh  pr_review.sh  pull_reviews.py  reply_review.py  review_path.sh  safe_merge.sh  workflow_state.sh
tests/: test_audit_run.py
