[workspace]
members = [
    "crates/core",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# Internal crates
project-core = { path = "crates/core" }

# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

# Shared dev-dependencies
proptest = "1"
